fixed problem compatibility flexbox gap and safari

--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -97,8 +97,11 @@
     padding: 0;
     display: flex;
     align-items: center;
-    gap: 12px;
     margin-bottom: 50px;
+}
+
+.profileLinkListAbout > * + * {
+    margin-left: 12px;
 }
 
 .profileLinkListAbout img {
