--- a/src/components/article/Article.css
+++ b/src/components/article/Article.css
@@ -9,7 +9,7 @@
 }
 .hoverBoxArticle {
     transition: 0.4s;
-    margin-bottom: 40px;
+    margin-bottom: 62px;
 }
 
 .hoverBoxArticle:hover {
