--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -68,8 +68,11 @@
     padding: 0;
     display: flex;
     align-items: center;
-    gap: 12px;
     margin: 55px 0 0 0;
+}
+
+.profileLinkList > * + * {
+    margin-left: 12px;
 }
 
 .profileLinkList img {
@@ -100,8 +103,15 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 21px;
     margin-bottom: 40px;
+}
+
+.brandLogoWrap a:nth-child(-n+3) {
+    margin-bottom: 21px;
+}
+
+.brandLogoWrap > * + * {
+    margin-left: 21px;
 }
 
 .brandLogoWrap img {
