--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -26,7 +26,10 @@
     padding: 0;
     display: flex;
     justify-content: flex-end;
-    gap: 70px;
+}
+
+.navbarLinkList > * + * {
+    margin-left: 70px;
 }
 
 .navbarLink {
