--- a/src/components/project/Project.css
+++ b/src/components/project/Project.css
@@ -7,7 +7,7 @@
 }
 .hoverBox {
     transition: 0.4s;
-    margin-bottom: 40px;
+    margin-bottom: 62px;
 }
 
 .hoverBox:hover {
